# sophon

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: pre-commit.yml
libs/python/sophon/: .gitignore  dev_requirements.txt  pyproject.toml
