[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry]
name = "sophon"
version = "0.1.0"
description = "Analyze human interactions"
authors = ["Rafal Jankowski <rafal@jankovsky.dev>"]
repository = "https://github.com/Raalsky/sophon"
readme = "README.md"
license = "MIT"
packages = [
    { include = "sophon", from = "src" },
]
include = ["CHANGELOG.md", "src/sophon/py.typed"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Tracker" = "https://github.com/Raalsky/sophon/issues"

[tool.black]
line-length = 120
target_version = ['py312']
include = '\.pyi?$,\_pb2\.py$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
force_grid_wrap = 2

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "UP"]

[tool.mypy]
files = ["src/sophon"]
install_types = "True"
non_interactive = "True"
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
show_error_codes = "True"
warn_unused_ignores = "True"
